feat: Rebranding from FlysSeats to SitFly across the application

--- a/flyseats-frontend/src/assets/i18n/en.json
+++ b/flyseats-frontend/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "app": {
-    "title": "FlysSeats",
-    "welcome": "Welcome to FlysSeats",
+    "title": "SitFly",
+    "welcome": "Welcome to SitFly",
     "description": "Book your flights easily"
   },
   "menu": {
