--- a/flyseats-frontend/src/assets/i18n/es.json
+++ b/flyseats-frontend/src/assets/i18n/es.json
@@ -1,7 +1,7 @@
 {
   "app": {
-    "title": "FlysSeats",
-    "welcome": "Bienvenido a FlysSeats",
+    "title": "SitFly",
+    "welcome": "Bienvenido a SitFly",
     "description": "Reserva tus vuelos fácilmente"
   },
   "menu": {
